--- a/behavioral.html
+++ b/behavioral.html
@@ -25,20 +25,19 @@
 <body>
 
 <div id="header"></div>
-
-     <div class="chart_wrap2">
-     <h2 id="dev"> Developmental/Behavioral Topics </h2>
-     <ul>
-            <li>Learning Disabilities</li>
+     <h2> Developmental/Behavioral Topics </h2>
+     <br/>
+     <div class="mainWrapper">
+            <h3>Learning Disabilities</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/learning-disabilities/Pages/default.aspx">Learning Disabilities Information</a></p>
-            <li>ADHD</li>
+            <h3>ADHD</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/adhd/Pages/default.aspx">ADHD Information</a></p>
-            <li>Anxiety in Teens</li>
+            <h3>Anxiety in Teens</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Anxiety-Disorders.aspx">Anxiety in Teens: What's Going On?</a></p>
-            <li>Adolescent Depression</li>
+            <h3>Adolescent Depression</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Childhood-Depression-What-Parents-Can-Do-To-Help.aspx">What Parents Can Do To Help</a></p>
-            <li>Autism Spectrum Disorder</li>
+            <h3>Autism Spectrum Disorder</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/Autism/Pages/Autism-Spectrum-Disorder.aspx">Autism Spectrum Disorder</a>
     
-        </ul>
 </div>
+</body>
