--- a/forms.html
+++ b/forms.html
@@ -24,6 +24,8 @@
 <body>
 <div id="header"></div>
     <h2> Patient Forms</h2>
+    <br/>
+    <div class="mainWrapper">
     <p>
         <a href="/pdfs/Consent_To_Treat.pdf" target="_blank">Consent To Treat</a>
         <br/>
@@ -46,8 +48,7 @@
         <a href="/pdfs/Records Release to us 2014.pdf" target="_blank">Release Records From Previous Provider</a>
         <br/>
         <br/>
-        <a href="/pdfs/WebPage.pdf" target="_blank">Release Records From Previous Provider</a>
     </p>
-    
+    </div>
 </body>
 </html>
