--- a/guide.html
+++ b/guide.html
@@ -25,6 +25,8 @@
 <body>
 
 <h2>Practice Guide</h2> 
+<br/>
+<div class="mainWrapper">
 
 <h3>Appointments</h3>
 <p>
@@ -96,7 +98,7 @@ If you think your child needs to be seen, please call early in the day to allow 
         <br/>
         Check out the handout linked <a href="/pdfs/well_child.pdf" target="_blank">here</a> for more information on what you should expect from well-child visits. </p>
     <li>Weight Checks</li>
-        <p class="minim">Weight checks for infants and children are done on a walk-in basis, and do not require appointments. Nurses are most available for weight check walk-ins from 9-10:30AM or 2-3:30PM. </p>
+        <p>Weight checks for infants and children are done on a walk-in basis, and do not require appointments. Nurses are most available for weight check walk-ins from 9-10:30AM or 2-3:30PM. </p>
         <li>Sick Patients</li> 
         <p> If your child needs to be seen for an acute illness, same day or next day appointments are available. Lengthier consultations for concerns about ongoing issues will be scheduled as soon as possible. </p>
         <li>Sports Physicals</li>
@@ -105,4 +107,4 @@ If you think your child needs to be seen, please call early in the day to allow 
     <p>Please indicate your specific health concerns when making your appointment, so we can give you ample time to address these concerns during your appointment. Follow-ups will be scheduled accordingly.</p>
     </ol>
 
-      
+</div>
