--- a/header.html
+++ b/header.html
@@ -31,18 +31,16 @@
                     <div class="dropdown-content">
                         <a href="about.html#phil">Our Philosophy</a>
                         <a href="about.html#prov">Our Providers</a>
-                        <a href="about.html#staff">Office Staff</a>
                     </div>
                 </div>
                 </div>
                 <div class="dropdown">
                 <a href="medical.html">Patient Resources</a>
                 <div class="dropdown-content">
-                    <a href="newborns.html">Newborns</a>
-                    <a href="illnesses.html">Common Illnesses</a>
-                    <a href="behavioral.html">Behavioral Health</a>
-                    <a href="safety.html">Safety</a>
-                    <a href="dosage.html">Dosage Charts</a>
+                    <a href="policy.html">Policies</a>
+                    <a href="forms.html">Forms</a>
+                    <a href="guide.html">Practice Guide</a>
+                    <a href="medical.html">Medical Info</a>
                     <a href="online.html">Online Resources</a>
                 </div>
             </div>
