--- a/medical.html
+++ b/medical.html
@@ -23,23 +23,25 @@
 </head>
 <body>
 <div id="header"></div>
-<br/>
-<br/>
-<br/>
-<br/>
 
-<div class="button_holder">
 
+<h2> Medical Information</h2>
+<br/>
+<div class="button_holder2">
 <a href="newborns.html"><button><img src="/images/child.png"></img><br/>Newborn Health</button></a>
 <a href="illnesses.html"><button><img src="/images/cough.png"></img><br/>Common Illnesses</button></a>
 <a href="/behavioral.html"><button><img src="/images/depression.png"></img><br/>Behavioral Health</button></a>
-
-
 </div>
 <div class="button_holder2">
 <a href="safety.html"><button><img src="/images/baby-car-seat.png"></img><br/>Children's Safety</button></a>
 <a href="dosage.html"><button><img src="/images/drug.png"></img><br/>Dosage Charts</button></a>
 <a href="online.html"><button><img src="/images/monitor.png"></img><br/>Online Resources</button></a>
 </div>
+
+<br/>
+<br/>
+<br/>
+<br/>
+
 </body>
 </html>
