--- a/illnesses.html
+++ b/illnesses.html
@@ -26,53 +26,54 @@
 
 <div id="header"></div>
 
-<div class="chart_wrap2">
-    <h2 id="ill"> Common Childhood Illnesses </h2>
-    <ul>
-        <li>Fever</li>
+    <h2> Common Childhood Illnesses </h2>
+    <br/>
+        <div class="mainWrapper">
+        <h3>Fever</h3>
         <p class="minim">Fever is a common accompaniment to many illnesses. Very few fevers are harmful in and of themselves. Fever in infants younger than three months of age (rectal temperature over 100.4F) needs to be evaluated immediately. 
-
         </p>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/fever/Pages/default.aspx">More Fever Info</a></p>
-        <li>Antibiotics</li>
+        <h3>Antibiotics</h3>
         <p class="minim">A majority of illnesses that children concur are viral in nature, which means that in most cases they will resolve without any specific treatment. Antibiotics do not cure a cold. Antibiotics should be used only when indicated. All medications have potential side effects, some of which can even be life-threatening. Remember we are here to do the best for your child. We will always prescribe an antibiotic when indicated, and choose the one which in our judgment best fits the circumstances.  </p>
-        <li>Allergies & Asthma</li>
+        <h3>Allergies & Asthma</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/allergies-asthma/Pages/default.aspx">Allergy & Asthma Info</a></p>
-        <li>Constipation</li>
+        <h3>Constipation</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/abdominal/Pages/Constipation.aspx">Constipation in Children</a></p>
-        <li>Upper Respiratory Tract Infections (Colds) </li>
+        <h3>Upper Respiratory Tract Infections (Colds) </h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/ear-nose-throat/Pages/Children-and-Colds.aspx">Common Cold Info</a></p>
-        <li> Influenza</li>
-        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/The-Flu.aspx"></a>Flu Info</p>
-        <li>Ear Infections</li>
+        <h3> Influenza</h3>
+        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/The-Flu.aspx">Flu Info</a></p>
+        <h3>Ear Infections</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/ear-nose-throat/Pages/Ear-Infection-Information.aspx">Ear Infection FAQs</a></p>
-        <li> Croup </li>
-        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/Croup-Treatment.aspx"></a>Croup and Your Young Child</p>
-        <li> Diarrhea/Dehydration</li>
-        <p class="minim"><a href="https://lakeviewpediatrics.net/Resources/Medical-Conditions/Diarrhea-Vomiting-and-Water-Loss-Dehydration"></a>Diarrhea, Vomiting and Water Loss</p>
-        <li> RSV </li>
-        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/RSV-When-Its-More-Than-Just-a-Cold.aspx"></a>RSV Info</p>
-        <li>Bronchiolitis</li>
-        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/Bronchiolitis.aspx"></a>Bronchiolitis and Your Young Child</p>
-        <li> Strep pharyngitis</li>
+        <h3> Croup </h3>
+        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/Croup-Treatment.aspx">Croup and Your Young Child</a></p>
+        <h3> Diarrhea/Dehydration</h3>
+        <p class="minim"><a href="https://lakeviewpediatrics.net/Resources/Medical-Conditions/Diarrhea-Vomiting-and-Water-Loss-Dehydration">Diarrhea, Vomiting and Water Loss</a></p>
+        <h3> RSV </h3>
+        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/RSV-When-Its-More-Than-Just-a-Cold.aspx">RSV Info</a></p>
+        <h3>Bronchiolitis</h3>
+        <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/chest-lungs/Pages/Bronchiolitis.aspx">Bronchiolitis and Your Young Child</a></p>
+        <h3> Strep pharyngitis</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/infections/Pages/Group-A-Streptococcal-Infections.aspx">Strep Throat Info</a></p>
-        <li> Urinary Tract Infections</li>
+        <h3> Urinary Tract Infections</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/genitourinary-tract/Pages/Urinary-Tract-Infections-in-Teens.aspx">UTI Information</a></p>
-        <li> Mouth Sores</li>
+        <h3> Mouth Sores</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/tips-tools/symptom-checker/Pages/symptomviewer.aspx?symptom=Mouth+Ulcers">Mouth Sore Information</a></p>
-        <li> Molluscum</li>
+        <h3> Molluscum</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/tips-tools/symptom-checker/Pages/symptomviewer.aspx?symptom=Molluscum">Molluscum Information</a></p>
-        <li> Conjunctivitis (Pink Eye)</li>
+        <h3> Conjunctivitis (Pink Eye)</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/eyes/Pages/PinkEye-Conjunctivitis.aspx">Pink Eye Information</a></p>
-        <li> Mononucleosis</li>
+        <h3> Mononucleosis</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/infections/Pages/Mononucleosis.aspx">Mononucleosis Information</a></p>
-        <li> Pinworms</li>
+        <h3> Pinworms</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/tips-tools/symptom-checker/Pages/symptomviewer.aspx?symptom=Pinworms">Pinworms Information</a></p>
-        <li> Head Lice</li>
+        <h3> Head Lice</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/from-insects-animals/Pages/Signs-of-Lice.aspx">Head Lice Information</a></p>
-        <li> Scabies</li>
+        <h3> Scabies</h3>
         <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/skin/Pages/Scabies.aspx">Scabies Information</a></p>
         
-    </ul>
-    </h2>
+    </div>
+
 </div>
+
+</body>
