--- a/about.html
+++ b/about.html
@@ -109,15 +109,18 @@
 
     <br />
     <br />
+    <br />
+    <br />
+    <br />
+    <br />
 <!-- 
     <h2 id="staff"> Office Staff</h2>
     <p class="bio"><strong>Lori DeSherlia</strong> Office Manager</p>
     <p class="bio"><strong>Julie Lanier</strong> Nursing Manager</p> -->
-
-
+<!-- 
     <footer>
         Copyright &copy; 2020
-    </footer>
+    </footer> -->
 
 </body>
 
