--- a/header.html
+++ b/header.html
@@ -28,14 +28,9 @@
 
                 <div class="dropdown">
                     <a href="about.html">About Us</a>
-                    <div class="dropdown-content">
-                        <a href="about.html#phil">Our Philosophy</a>
-                        <a href="about.html#prov">Our Providers</a>
-                    </div>
-                </div>
                 </div>
                 <div class="dropdown">
-                <a href="medical.html">Patient Resources</a>
+                <a>Patient Resources</a>
                 <div class="dropdown-content">
                     <a href="policy.html">Policies</a>
                     <a href="forms.html">Forms</a>
