--- a/header.html
+++ b/header.html
@@ -30,7 +30,7 @@
                     <a href="about.html">About Us</a>
                 </div>
                 <div class="dropdown">
-                <a>Patient Resources</a>
+                <a href="resources.html">Patient Resources</a>
                 <div class="dropdown-content">
                     <a href="policy.html">Policies</a>
                     <a href="forms.html">Forms</a>
