--- a/resources.html
+++ b/resources.html
@@ -24,13 +24,29 @@
 <body>
 <div id="header"></div>
 
-<a href="behavioral.html">Behavior and Development</a>
-<a href="immunization.html">Immunization Info</a>
-<a href="newborns.html">Newborn Health</a>
-<a href="safety.html">Children's Safety</a>
-<a href="dosage.html">Dosage Charts</a>
-<a href="online.html">Online Resources</a>
+<h2>Patient Resources</h2>
+<br/>
+<div class="mainWrapper">
+    <br/>
+    <a href="policy.html">Policies</a>
+    <br/>
+    <br/>
+    <a href="forms.html">Forms</a>
+    <br/>
+    <br/>
+    <a href="guide.html">Practice Guide</a>
+    <br/>
+    <br/>
+    <a href="medical.html">Medical Info</a>
+    <br/>
+    <br/>
+    <a href="online.html">Online Resources</a>
+    <br/>
+
+</div>
+
 
 
 </body>
 </html>
+
