--- a/header.html
+++ b/header.html
@@ -10,7 +10,7 @@
             }
             </script>
             
-
+            <div class="stack">
             <div class="sidebyside">
                 <img src="/images/ppplogo.jpg" class="logo" alt="Logo">
                 <div class="stack">
@@ -19,6 +19,7 @@
                     <div class="title2"> (850) 402-5454, Mon-Fri 8:30am-5pm </div>
                 </div>
             </div>
+        </div>
             <div class="topnav" id="myTopnav">
                        
         <div class="innernav">
