update with mom

--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
 
     <div id="header"></div>
     <h2 id="phil"> Our Philosophy </h2>
-    <p class="purpose2"> Your children’s well-being is our main priority. Our board certified doctors specialize in the
+    <p class="purpose2"> Your children’s well-being is our main priority. Our board-certified doctors specialize in the
         care of children and adolescents. We are in a group practice to ensure that help is available at all times to
         meet your children’s needs.
 
@@ -85,7 +85,7 @@
 
         <figure>
             <img class="bioimg" id="Marci" src="/images/Marci.jpg"></img>
-            <figcaption><a href="Marci.html">Marci Barnishin</a></figcaption>
+            <figcaption><a href="Marci.html">Marci Bodine</a></figcaption>
         </figure>
 
         <figure>
