--- a/behavioral.html
+++ b/behavioral.html
@@ -28,7 +28,7 @@
      <h2> Developmental/Behavioral Topics </h2>
      <br/>
      <div class="mainWrapper">
-            <h3>Learning Disabilities</h3>
+            <h3 class="top">Learning Disabilities</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/learning-disabilities/Pages/default.aspx">Learning Disabilities Information</a></p>
             <h3>ADHD</h3>
             <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/adhd/Pages/default.aspx">ADHD Information</a></p>
