--- a/contact.html
+++ b/contact.html
@@ -23,6 +23,8 @@
 
 <body>
     <div id="header"></div>
+    <h2>Contact Us</h2>
+    <br/>
     <div class="mainWrapper">
         <p> 1881 Professional Park Circle, Suite 80, Tallahassee, FL 32308
             <br />
@@ -33,15 +35,18 @@
             <strong>Fax: </strong>(850) 402-5451
             <br />
             <br />
-            <strong>Hours: </strong>Monday through Friday, 8:30am -5:00 pm.
+            <strong>Hours: </strong>Monday through Friday, 8:30am - 5:00 pm.
             <br />
             <br />
-            <strong> Weekday Phone Hours:</strong> Monday through Friday, 9:00am-1:00pm, and 2:00pm-5:00pm. Please call
+            <strong> Weekday Phone Hours:</strong> Monday through Friday, 9:00am - 1:00pm, and 2:00pm - 5:00pm. Please call
             to arrange prenatal visits.
             <br />
             <br />
             <strong>After Hours:</strong> If you need to contact us during after hours or during weekends, call our
-            number above to reach the on-call nurse.
+            number above to reach the on-call nurse. 
+            <br />
+            <br />
+            <strong>Forms:</strong> Please click <a href="forms.html">here</a> to access our intake forms. 
         </p>
 
     </div>
