--- a/index.html
+++ b/index.html
@@ -29,9 +29,8 @@
 
 <div class="button_holder3">
 <a href="/guide.html"><button> <img src="/images/book.png"></img><br/>Practice Guide</button></a>
-<a href="/forms.html"><button> <img src="/images/clipboard.png"></img><br/>Forms</button></a>
 <a href="/policy.html"><button> <img src="/images/contract.png"></img><br/>Policies</button></a>
-
+<a href="/medical.html"><button> <img src="/images/cough.png"></img><br/>Medical Info</button></a>
 </div>
 
 </body>
