--- a/newborns.html
+++ b/newborns.html
@@ -29,7 +29,7 @@
         <h2 id="newb"> Newborns</h2>
     <br/>
     <div class="mainWrapper">
-            <h3>Fever</h3>
+            <h3 class="top">Fever</h3>
             <p> Any infant under three months of age who has a fever greater than or equal to 100.4 degrees rectally may
                 be in danger of having a serious illness. We need to be informed of such an infant immediately so we can
                 make arrangements to evaluate them. </p>
