--- a/policy.html
+++ b/policy.html
@@ -28,7 +28,7 @@
     <br />
 
     <div class="mainWrapper">
-    <h3> Fees</h3>
+    <h3 class="top"> Fees</h3>
     <p>
         The increasing costs of health care are or should be a concern to all. Advances in technology, expectations of
         the public, insurance costs, and inflation all have contributed to the rising cost of medical care . We
