--- a/safety.html
+++ b/safety.html
@@ -30,7 +30,7 @@
     <h2 >Keeping Children Safe</h2>
     <br/>
     <div class="mainWrapper">
-         <h3>Media</h3>
+         <h3 class="top">Media</h3>
          <p class="minim">Access to internet, TV and games can both help and hurt kids. 
          Refer to the guide linked <a href="https://www.healthychildren.org/English/family-life/Media/Pages/How-to-Make-a-Family-Media-Use-Plan.aspx">here</a> for information on how to protect your kids online and how to limit their media access.  
         </p>
