--- a/John.html
+++ b/John.html
@@ -30,7 +30,7 @@
 
             <img id="John" src="/images/John.jpg"></img>
 
-            <p class="bio"><strong>John Elzie MD</strong> grew up in north Florida and graduated from Leon High School
+            <p class="bio"><strong>John Elzie MD</strong> grew up in North Florida and graduated from Leon High School
                 in Tallahassee. He attended medical school at the University of South Florida and completed his
                 pediatric residency in Gainesville at the University of Florida. He moved back to Tallahassee in 2001
                 with his wife and three children to join Professional Park Pediatrics. He enjoys practicing pediatrics
