--- a/Marci.html
+++ b/Marci.html
@@ -29,10 +29,10 @@
         <div class="row2">
 
             <img id="Marci" src="/images/Marci.jpg"></img>
-            <p class="bio"> <strong>Marci Barnishin</strong> was born in Tulsa, OK and grew up in Tallahassee. She and
+            <p class="bio"> <strong>Marci Bodine</strong> was born in Tulsa, OK and grew up in Tallahassee. She and
                 her four siblings all
                 graduated from Leon High School.  In 1993 she graduated from Florida State University with a
-                Bachelor of Science in Nursing , and in 1996 she earned a Master of Nursing from the University of
+                Bachelor of Science in Nursing, and in 1996 she earned a Master of Nursing from the University of
                 Florida. She worked at Timberlane Pediatrics from 1996 to 1999, and has worked at Professional
                 Park Pediatrics as a nurse practitioner since 1999. She enjoys bringing smiles to the faces of
                 children and parents with silly things like wildly colored hair and funny Christmas hats. Her hobbies
