--- a/Nectar.html
+++ b/Nectar.html
@@ -30,7 +30,7 @@
 
             <img id="Nectar" src="/images/Nectar.jpg"></img>
             <p class="bio"><strong>Nectar Aintablian MD</strong> grew up in Lebanon and attended American University of
-                Beirut for Medical school. After her residency in Pediatrics at Buffalo Children’s Hospital she served
+                Beirut for Medical school. After her residency in Pediatrics at Buffalo Children’s Hospital, she served
                 as chief resident there.
                 She then completed a fellowship in Pediatric Infectious Diseases at UC San Diego.
                 She joined PPP in 2014. Her particular emphasis is preventing and treating infectious diseases in
