--- a/online.html
+++ b/online.html
@@ -56,7 +56,7 @@
         <a href="http://www.healthychildren.org/spanish"> HealthyChildren.org en Español</a>
         <br />
         <br />
-        <a href="http://www.immunize.org/vaccines">Immunize Action Coalition on Vaccines</a>
+        <a href="http://www.immunize.org/vaccines">Immunization Action Coalition on Vaccines</a>
         <br />
         <br />
         <a href="http://www.kidshealth.org/">KidsHealth.org</a>
@@ -66,9 +66,6 @@
         <br />
         <br />
         <a href="http://www.choosemyplate.gov/"> Choose My Plate on Healthy Eating</a>
-        <br />
-        <br />
-        <a href="http://q-corp.org/compare-your-care"> Oregon Health Care Quality Corp: Compare Your Care</a>
         <br />
         <br />
         <a href="http://www.safekids.org/">Safe Kids Worldwide on Child Safety</a>
