--- a/behavioral.html
+++ b/behavioral.html
@@ -28,16 +28,23 @@
      <h2> Developmental/Behavioral Topics </h2>
      <br/>
      <div class="mainWrapper">
-            <h3 class="top">Learning Disabilities</h3>
-            <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/learning-disabilities/Pages/default.aspx">Learning Disabilities Information</a></p>
-            <h3>ADHD</h3>
-            <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/adhd/Pages/default.aspx">ADHD Information</a></p>
-            <h3>Anxiety in Teens</h3>
-            <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Anxiety-Disorders.aspx">Anxiety in Teens: What's Going On?</a></p>
-            <h3>Adolescent Depression</h3>
-            <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Childhood-Depression-What-Parents-Can-Do-To-Help.aspx">What Parents Can Do To Help</a></p>
-            <h3>Autism Spectrum Disorder</h3>
-            <p class="minim"><a href="https://www.healthychildren.org/English/health-issues/conditions/Autism/Pages/Autism-Spectrum-Disorder.aspx">Autism Spectrum Disorder</a>
+        <ul>
+            <li><a href="#learn">Learning Disabilities</a></li>
+            <li><a href="#adhd">ADHD</a></li>
+            <li><a href="#anxiety">Anxiety in Teens</a></li>
+            <li><a href="#depression">Adolescent Depression</a></li>
+            <li><a href="#autism">Autism Spectrum Disorder</a></li>
+        </ul>
+            <h3 id="learn" class="top">Learning Disabilities</h3>
+            <p><a href="https://www.healthychildren.org/English/health-issues/conditions/learning-disabilities/Pages/default.aspx">Learning Disabilities Information</a></p>
+            <h3 id="adhd">ADHD</h3>
+            <p><a href="https://www.healthychildren.org/English/health-issues/conditions/adhd/Pages/default.aspx">ADHD Information</a></p>
+            <h3 id="anxiety">Anxiety in Teens</h3>
+            <p><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Anxiety-Disorders.aspx">Anxiety in Teens: What's Going On?</a></p>
+            <h3 id="depression">Adolescent Depression</h3>
+            <p><a href="https://www.healthychildren.org/English/health-issues/conditions/emotional-problems/Pages/Childhood-Depression-What-Parents-Can-Do-To-Help.aspx">What Parents Can Do To Help</a></p>
+            <h3 id="autism">Autism Spectrum Disorder</h3>
+            <p><a href="https://www.healthychildren.org/English/health-issues/conditions/Autism/Pages/Autism-Spectrum-Disorder.aspx">Autism Spectrum Disorder</a>
     
 </div>
 </body>
