--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             <br />
             <br />
             <strong>After Hours:</strong> If you need to contact us during after hours or during weekends, call our
-            number above to reach the on-call nurse. 
+            number above to reach the on-call staff. 
             <br />
             <br />
             <strong>Forms:</strong> Please click <a href="forms.html">here</a> to access our intake forms. 
