--- a/header.html
+++ b/header.html
@@ -9,7 +9,7 @@
                 }
             }
             </script>
-            
+            <meta name="viewport" content="width=device-width, initial-scale=1">
             <div class="stack">
             <div class="sidebyside">
                 <img src="/images/ppplogo.jpg" class="logo" alt="Logo">
@@ -42,5 +42,7 @@
             </div>
 
             <a href="contact.html">Contact Us</a>
+            <a href="covid.html">COVID</a>
             </div>
         </div>
+    
