--- a/newborns.html
+++ b/newborns.html
@@ -27,58 +27,75 @@
     <div id="header"></div>
   
         <h2 id="newb"> Newborns</h2>
+    
     <br/>
     <div class="mainWrapper">
-            <h3 class="top">Fever</h3>
+        <ul>
+            <li><a href="#fever">Fever</a></li>
+            <li><a href="#sleep">Back to Sleep</a></li>
+            <li><a href="#weight">Weight Checks</a></li>
+            <li><a href="#jaundice">Jaundice</a></li>
+            <li><a href="#feeding">Feeding Your Baby</a></li>
+            <li><a href="#colic">Colic</a></li>
+            <li><a href="#rashes">Newborn Rashes and Birthmarks</a></li>
+            <li><a href="#diaper">Diaper Rash</a></li>
+            <li><a href="#shape">Head Shape</a></li>
+            <li><a href="#solid">Starting Solid Foods</a></li>
+            <li><a href="#sleepnew">Sleeping in Newborns</a></li>
+            <li><a href="#teeth">Teething in Newborns</a></li>
+
+        </ul>
+            <h3 id="fever" class="top">Fever</h3>
             <p> Any infant under three months of age who has a fever greater than or equal to 100.4 degrees rectally may
                 be in danger of having a serious illness. We need to be informed of such an infant immediately so we can
                 make arrangements to evaluate them. </p>
-            <h3> Back to Sleep </h3>
+            <h3 id="sleep"> Back to Sleep </h3>
             <p><a
                     href="https://www.healthychildren.org/English/ages-stages/baby/sleep/Pages/A-Parents-Guide-to-Safe-Sleep.aspx">Parent's
                     Guide to Safe Sleep</a>
             </p>
-            <h3>Weight Checks</h3>
+            <h3 id="weight">Weight Checks</h3>
             <p>Weight checks for newborns are done on a walk-in basis, and do not require appointments. Nurses are most
                 available for weight check walk-ins from 9-10:30AM or 2-3:30PM. </p>
-            <h3> Jaundice in Newborns</h3>
+
+            <h3 id="jaundice"> Jaundice in Newborns</h3>
             <p> <a href="https://www.healthychildren.org/English/ages-stages/baby/Pages/Jaundice.aspx">Jaundice FAQs</a>
             </p>
 
-            <h3> Feeding Your Baby</h3>
+            <h3 id="feeding"> Feeding Your Baby</h3>
             <p> <a
                     href="https://www.healthychildren.org/English/healthy-living/growing-healthy/Pages/baby-food-and-feeding.aspx">Feeding
                     FAQs</a></p>
 
-            <h3>Colic</h3>
+            <h3 id="colic">Colic</h3>
             <p> <a href="https://www.healthychildren.org/English/ages-stages/baby/crying-colic/Pages/Colic.aspx">Colic
                     Relief Tips</a></p>
 
-            <h3> Newborn Rashes and Birthmarks</h3>
+            <h3 id="rashes"> Newborn Rashes and Birthmarks</h3>
             <p> <a
                     href="https://www.healthychildren.org/English/ages-stages/baby/bathing-skin-care/Pages/Your-Newborns-Skin-Birthmarks-and-Rashes.aspx">Birthmarks
                     and Rashes Information</a></p>
 
-            <h3> Diaper Rash</h3>
+            <h3 id="diaper"> Diaper Rash</h3>
             <p> <a
                     href="https://www.healthychildren.org/English/ages-stages/baby/diapers-clothing/Pages/Diaper-Rash.aspx>Diaper">Diaper Rash Information</a>
           </p>
 
-            <h3> Head Shape</h3>
+            <h3 id="shape"> Head Shape</h3>
             <p> <a
                     href="https://www.healthychildren.org/English/health-issues/conditions/Cleft-Craniofacial/Pages/Positional-Skull-Deformities-and-Torticollis.aspx">Head
                     Shape FAQs</a></p>
 
-            <h3>Starting Solid Foods</h3>
+            <h3 id="solid">Starting Solid Foods</h3>
             <p> <a
                     href="https://www.healthychildren.org/English/ages-stages/baby/feeding-nutrition/Pages/Bite-Sized-Milestones-Signs-of-Solid-Food-Readiness-.aspx">Solid
                     Food Milestones</a></p>
 
-            <h3> Sleeping in Newborns </h3>
+            <h3 id="sleepnew"> Sleeping in Newborns </h3>
             <p> <a href="https://www.healthychildren.org/English/ages-stages/baby/sleep/Pages/default.aspx">Sleep
                 Articles</a></p>
 
-            <h3> Teething in Newborns </h3>
+            <h3 id="teeth"> Teething in Newborns </h3>
             <p><a
                     href="https://www.healthychildren.org/English/ages-stages/baby/teething-tooth-care/Pages/default.aspx">Teething
                     Articles</a></p>
