--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <div class="button_holder3">
 <a href="/guide.html"><button> <img src="/images/book.png"></img><br/>Practice Guide</button></a>
-<a href="/policy.html"><button> <img src="/images/contract.png"></img><br/>Policies</button></a>
+<a href="/policy.html"><button> <img src="/images/contract.png"></img><br/>Policies <br/></button></a>
 <a href="/medical.html"><button> <img src="/images/cough.png"></img><br/>Medical Info</button></a>
 </div>
 
