--- a/policy.html
+++ b/policy.html
@@ -52,8 +52,8 @@
             At Professional Park Pediatrics, we file insurance forms for Capital Health Plan, Blue Cross/Blue Shield
             (PPO),
             United Health, First Health Network (Contact our office for information), and Tricare Select (Contact our
-            office
-            for information). We accept Medicaid HMOs incuding Wellcare, Humana, Sunshine and Lighthouse. Within the
+            officeLighthouse
+            for information). We accept Medicaid HMOs incuding Wellcare, Humana and Sunshine. Within the
             Healthy
             Kids program, we only accept Aetna Better Health.
 
