--- a/header.html
+++ b/header.html
@@ -42,7 +42,7 @@
             </div>
 
             <a href="contact.html">Contact Us</a>
-            <a href="covid.html">COVID</a>
+            <a href="covid.html">COVID-19</a>
             </div>
         </div>
     
