--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div id="header"></div>
 <p class="purpose"> Welcome to Professional Park Pediatrics!</p>
 
-<p class="purpose"> Click <a href="/covid.html">here</a> for our most recent COVID updates. </p>
+<p class="purpose"> Click <a href="/covid.html">here</a> for our most recent COVID-19 updates. </p>
 
 <div class="button_holder3">
 <a href="/guide.html"><button> <img src="/images/book.png"></img><br/>Practice Guide</button></a>
