--- a/guide.html
+++ b/guide.html
@@ -40,7 +40,7 @@
 
         <h3 class="top" id="appt">Appointments</h3>
         <p>
-            Well baby and well child visits need to be scheduled in advance.
+            Well-baby and well-child visits need to be scheduled in advance.
             It is not uncommon for us to schedule a month or more ahead of time
             in order to allow ample time for visits for sick children. There may
             be occasions in the office where an emergency will dictate that we see
