--- a/illnesses.html
+++ b/illnesses.html
@@ -97,7 +97,7 @@
                 and Your Young Child</a></p>
         <h3 id="diarrhea"> Diarrhea/Dehydration</h3>
         <p><a
-                href="https://lakeviewpediatrics.net/Resources/Medical-Conditions/Diarrhea-Vomiting-and-Water-Loss-Dehydration">Diarrhea,
+                href="https://www.healthychildren.org/English/tips-tools/symptom-checker/Pages/symptomviewer.aspx?symptom=Vomiting+With+Diarrhea">Diarrhea,
                 Vomiting and Water Loss</a></p>
         <h3 id="rsv"> RSV </h3>
         <p><a
