--- a/newborns.html
+++ b/newborns.html
@@ -78,7 +78,7 @@
 
             <h3 id="diaper"> Diaper Rash</h3>
             <p> <a
-                    href="https://www.healthychildren.org/English/ages-stages/baby/diapers-clothing/Pages/Diaper-Rash.aspx>Diaper">Diaper Rash Information</a>
+                    href="https://www.healthychildren.org/English/ages-stages/baby/diapers-clothing/Pages/Diaper-Rash.aspx">Diaper Rash Information</a>
           </p>
 
             <h3 id="shape"> Head Shape</h3>
