--- a/online.html
+++ b/online.html
@@ -28,7 +28,7 @@
     <br/>
     <div class="mainWrapper">
         <br/>
-        <a href="FirstWordsProject.com"> FirstWordsProject.com</a>
+        <a href="https://firstwordsproject.com/"> FirstWordsProject.com</a>
         <br />
         <br />
 
