--- a/safety.html
+++ b/safety.html
@@ -56,9 +56,9 @@
 
         <p>Infants should ride rear-facing until they reach the maximum weight recommended by the seat manufacturer. By
             that point a child can be up to two or more years of age. Once children outgrow their car seat they should
-            ride in a belt-positioning booster seat. Children should ride in a booster seat until the seat belst fits
+            ride in a belt-positioning booster seat. Children should ride in a booster seat until the seat belts fits
             properly, which is typically when they are 4 feet 9 inches tall, and aged 8 to 12. Children should not ride
-            in the front seat until they are 13 years old. Refer to the AAP guide on child car safety<a
+            in the front seat until they are 13 years old. Refer to the AAP guide on child car safety <a
                 href=" https://www.healthychildren.org/English/safety-prevention/on-the-go/Pages/Where-We-Stand-Car-Seats-For-Children.aspx">here</a>.
         </p>
 
