--- a/header.html
+++ b/header.html
@@ -40,8 +40,9 @@
                     <a href="online.html">Online Resources</a>
                 </div>
             </div>
-
+            <div class="dropdown">
             <a href="contact.html">Contact Us</a>
+        </div> <div class="dropdown">
             <a href="covid.html">COVID-19</a>
             </div>
         </div>
