--- a/policy.html
+++ b/policy.html
@@ -82,7 +82,7 @@
         <p> We have separate waiting rooms at our office, usually referred to as the
             “Well” and “Sick” waiting rooms. This is to minimize exposure of infants and children who
             are in for weight checks or checkups to patients who might have potentially
-            contagious illnesses. If you child is in for ANYTHING OTHER THAN A ROUTINE
+            contagious illnesses. If your child is in for ANYTHING OTHER THAN A ROUTINE
             CHECKUP, you will likely be asked to wait in the “sick” waiting room. Sometimes
             this causes hard feelings on the part of parents who feel their children are
             unlikely to be contagious. Examples: “But it’s just a clear runny nose.”
