--- a/header.html
+++ b/header.html
@@ -10,8 +10,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <div class="stack">
     <div class="sidebyside">
+        <div class="stackleft">
         <img src="/images/ppplogo.jpg" class="logo" alt="Logo">
-        <div class="stack">
+        </div><div class="stack">
             <div class="title"> Professional Park Pediatrics </div>
             <div class="title2"> 1881 Professional Park Circle, Suite 80, Tallahassee, FL 32308 </div>
             <div class="title2"> (850) 402-5454, Mon-Fri 8:30am-5pm </div>
