--- a/header.html
+++ b/header.html
@@ -10,10 +10,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <div class="stack">
     <div class="sidebyside">
-        <div class="stackleft">
         <img src="/images/ppplogo.jpg" class="logo" alt="Logo">
-    </div>
-      <div class="stack">
+      <div class="stackright">
             <div class="title"> Professional Park Pediatrics </div>
             <div class="title2"> 1881 Professional Park Circle, Suite 80, Tallahassee, FL 32308 </div>
             <div class="title2"> (850) 402-5454, Mon-Fri 8:30am-5pm </div>
@@ -21,7 +19,6 @@
     </div>
 </div>
 <div class="topnav" id="myTopnav">
-
     <div class="innernav">
         <a href="index.html">Home</a>
 
