--- a/header.html
+++ b/header.html
@@ -25,23 +25,23 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
         <div class="dropdown">
-            <a href="about.html">About Us</a>
+            <a href="about.html#header">About Us</a>
         </div>
         <div class="dropdown">
-            <a href="resources.html">Patient Resources</a>
+            <a href="resources.html#header">Patient Resources</a>
             <div class="dropdown-content">
-                <a href="policy.html">Policies</a>
-                <a href="forms.html">Forms</a>
-                <a href="guide.html">Practice Guide</a>
-                <a href="medical.html">Medical Info</a>
-                <a href="online.html">Online Resources</a>
+                <a href="policy.html#header">Policies</a>
+                <a href="forms.html#header">Forms</a>
+                <a href="guide.html#header">Practice Guide</a>
+                <a href="medical.html#header">Medical Info</a>
+                <a href="online.html#header">Online Resources</a>
             </div>
         </div>
         <div class="dropdown">
-            <a href="contact.html">Contact Us</a>
+            <a href="contact.html#header">Contact Us</a>
         </div>
         <div class="dropdown">
-            <a href="covid.html">COVID-19</a>
+            <a href="covid.html#header">COVID-19</a>
         </div>
 
     </div>
