--- a/header.html
+++ b/header.html
@@ -25,23 +25,23 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
         <div class="dropdown">
-            <a href="about.html#header">About Us</a>
+            <a href="about.html#top">About Us</a>
         </div>
         <div class="dropdown">
-            <a href="resources.html#header">Patient Resources</a>
+            <a href="resources.html#top">Patient Resources</a>
             <div class="dropdown-content">
-                <a href="policy.html#header">Policies</a>
-                <a href="forms.html#header">Forms</a>
-                <a href="guide.html#header">Practice Guide</a>
-                <a href="medical.html#header">Medical Info</a>
-                <a href="online.html#header">Online Resources</a>
+                <a href="policy.html#top">Policies</a>
+                <a href="forms.html#top">Forms</a>
+                <a href="guide.html#top">Practice Guide</a>
+                <a href="medical.html#top">Medical Info</a>
+                <a href="online.html#top">Online Resources</a>
             </div>
         </div>
         <div class="dropdown">
-            <a href="contact.html#header">Contact Us</a>
+            <a href="contact.html#top">Contact Us</a>
         </div>
         <div class="dropdown">
-            <a href="covid.html#header">COVID-19</a>
+            <a href="covid.html#top">COVID-19</a>
         </div>
 
     </div>
