--- a/header.html
+++ b/header.html
@@ -25,21 +25,21 @@
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
 
         <div class="dropdown">
-            <a href="about.html#top">About Us</a>
+            <a href="about.html">About Us</a>
         </div>
         <div class="dropdown">
-            <a href="resources.html#top">Patient Resources</a>
+            <a href="resources.html">Patient Resources</a>
             <div class="dropdown-content">
-                <a href="policy.html#top">Policies</a>
-                <a href="forms.html#top">Forms</a>
-                <a href="guide.html#top">Practice Guide</a>
-                <a href="medical.html#top">Medical Info</a>
-                <a href="online.html#top">Online Resources</a>
+                <a href="policy.html">Policies</a>
+                <a href="forms.html">Forms</a>
+                <a href="guide.html">Practice Guide</a>
+                <a href="medical.html">Medical Info</a>
+                <a href="online.html">Online Resources</a>
             </div>
         </div>
-            <a href="contact.html#top">Contact Us</a>
+            <a href="contact.html">Contact Us</a>
         <div class="dropdown">
-            <a href="covid.html#top">COVID-19</a>
+            <a href="covid.html">COVID-19</a>
         </div>
 
     </div>
